# ClusteringByCUDA

./: .gitignore  CMakeLists.txt  README.md  clustering.h  【CUDA编程】基于CUDA的Fuzzy C-means算法的简单实现.md
fuzzyCmeans/: fuzzyCmeans.h
fuzzyCmeans/cuda/: CMakeLists.txt  cuda_kernels.cuh  error.cuh  fuzzyCmeans.cu
kmeans/: CMakeLists.txt  kmeans.h
kmeans/cuda/: CMakeLists.txt  cuda_kernels.cuh  error.cuh  kmeans.cu
samples/: CMakeLists.txt  fuzzyCmeans_fp32.cpp  fuzzyCmeans_fp64.cpp  kmeans_fp32.cpp  kmeans_fp64.cpp
